<resources>
    <string name="app_name">video13</string>
    <string name="txt_valor1_string">Ingresa el primer valor</string>
    <string name="txt_valor2_string">Ingresa el segundo valor</string>
    <string name="rb1_string">Sumar</string>
    <string name="rb2_string">Restar</string>
    <string name="boton_string">calcular</string>
    <string name="txt_resultado_string">Resultado</string>
</resources>
